# KivySample

./: .gitignore  pyproject.toml
app/: __main__.py  main.kv  main.py
core/: __init__.py
